fix: update pre overflow to auto, to remove unnecessary scrollbar display

--- a/source/stylesheets/partials/_syntax.css.scss
+++ b/source/stylesheets/partials/_syntax.css.scss
@@ -3,7 +3,7 @@ pre {
   padding: 0;
   line-height: 1.5;
   white-space: pre;
-  overflow: scroll;
+  overflow: auto;
   word-break: inherit;
   word-wrap: inherit;
 }
